--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "REST API",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "NODE_ENV=test npm run migrate:up && NODE_ENV=test npm run load:db && NODE_ENV=test mocha --require @babel/polyfill --require @babel/register --timeout 1000 ./src/test/ --exit || exit 0",
     "dev": "NODE_ENV=dev nodemon -r esm src/index.js",
     "build": "babel src --out-dir build",
     "production": "NODE_ENV=production node build/index.js",
     "createmigration": "node-pg-migrate create",
-    "migrate": "node-pg-migrate up",
+    "migrate:up": "node-pg-migrate up",
+    "migrate:down": "node-pg-migrate down",
     "lint": "npx eslint src",
     "lint:fix": "npx eslint src --fix",
     "prettier": "npx prettier src --check --exit || exit 0",
@@ -39,16 +40,21 @@
     "@babel/node": "^7.14.9",
     "@babel/plugin-transform-runtime": "^7.14.3",
     "@babel/preset-env": "^7.14.2",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "eslint": "^7.28.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
     "esm": "^3.2.25",
+    "mocha": "^9.0.3",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "@babel/register": "^7.14.5",
     "@babel/runtime": "^7.14.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -56,7 +62,7 @@
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
-    "node-pg-migrate": "^5.9.0",
+    "node-pg-migrate": "^5.10.0",
     "pg": "^8.6.0"
   }
 }
