--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test npm run migrate:up && NODE_ENV=test npm run load:db && NODE_ENV=test mocha --require @babel/polyfill --require @babel/register --timeout 1000 ./src/test/ --exit || exit 0",
-    "dev": "NODE_ENV=dev nodemon -r esm src/index.js",
+    "dev": "NODE_ENV=dev nodemon -r esm src/index.js | pino-pretty",
     "build": "babel src --out-dir build",
     "production": "NODE_ENV=production node build/index.js",
     "createmigration": "node-pg-migrate create",
@@ -50,6 +50,7 @@
     "esm": "^3.2.25",
     "mocha": "^9.0.3",
     "nodemon": "^2.0.12",
+    "pino-pretty": "^5.1.2",
     "prettier": "^2.3.1"
   },
   "dependencies": {
@@ -60,9 +61,11 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-pino-logger": "^6.0.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "node-pg-migrate": "^5.10.0",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "pino": "^6.13.0"
   }
 }
