--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,24 @@
 version: '2'
-services: 
+services:
+  database:
+    restart: always
+    image: postgres:9.6.2-alpine
+    ports:
+      - '5433:5432'
+    expose:
+      - '5432'
   web:
     build: .
-    command: npm run dev
-    volumes: 
+    command: >
+      sh -c "DATABASE_URL=postgres://postgres:postgres@database:5432/postgres npm run migrate:up &&
+             npm run dev"
+    volumes:
       - .:/usr/app/
       - /usr/app/app_modules
-    ports: 
-      - "3000:3000"
-    depends_on: 
-      - postgres
+    ports:
+      - '4000:4000'
+    depends_on:
+      - database
     environment: 
-      DATABASE_URL: postgres://postgres:postgres@localhost:5432/acronyms
-  postgres:
-    image: postgres:9.6.2-alpine
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_DB: acronyms
+      - DATABASE_URL=postgres://postgres:postgres@database:5432/postgres
+      - secretkey=secretkey
