Chore: Update build and fix Procfile

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "NODE_ENV=test npm run migrate:up && NODE_ENV=test mocha --require @babel/polyfill --require @babel/register --timeout 1000 ./src/test/ --exit || exit 0",
     "dev": "NODE_ENV=dev nodemon -r esm src/index.js | pino-pretty",
+    "staging": "NODE_ENV=production node build/index.js | pino-pretty",
     "build": "babel src --out-dir build",
-    "production": "NODE_ENV=production node build/index.js",
+    "production": "NODE_ENV=production node build/index.js | pino-pretty",
     "createmigration": "node-pg-migrate create",
     "migrate:up": "node-pg-migrate up",
     "migrate:down": "node-pg-migrate down",
